Closed Bug 1187367 Opened 9 years ago Closed 9 years ago

[e10s][TSF] TSFTextStore shouldn't destroy native caret until notifying TSF of layout change

Categories

(Core :: Widget: Win32, defect)

x86
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file)

This is what ATOK's suggest window is sometimes positioned at top-left of the window.
Now, TSFTextStore destroys the native caret for ATOK at unlocking the document. However, it's necessary for ATOK until new layout is computed. I.e., we shouldn't destroy the caret until we notify TSF of layout change.
Attachment #8638591 - Flags: review?(VYV03354)
Attachment #8638591 - Flags: review?(VYV03354) → review+
url:        https://hg.mozilla.org/integration/mozilla-inbound/rev/649e039d21193095219c6a4fdd54f6fc624fe039
changeset:  649e039d21193095219c6a4fdd54f6fc624fe039
user:       Masayuki Nakano <masayuki@d-toybox.com>
date:       Sun Jul 26 12:29:47 2015 +0900
description:
Bug 1187367 TSFTextStore shouldn't destroy native caret for ATOK until notifying TSF of layout change r=emk
https://hg.mozilla.org/mozilla-central/rev/649e039d2119
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: