Bug 1187367 TSFTextStore shouldn't destroy native caret for ATOK until notifying TSF of layout change r=emk